Organize imports, simpler arrays, simpler if/else.